# CODIFO

./: CMakeLists.txt  Constructor.h  README.md  header.h  main.cpp
src/: App.cpp  App.h  Cell.cpp  Cell.h  Constructor.cpp  Constructor.h  header.h  main.cpp
